--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "datacities":"node ./models/data/cities.js"
+    "datacities":"node ./models/data/cities.js",
+    "dataitineraries":"node ./models/data/itineraries.js"
   },
   "keywords": [],
   "author": "",
