--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
   "name": "mytinerary-back-agustinbarbesino",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "Repositorio de backend Full Stack MERN",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "datacities":"node ./models/data/cities.js",
-    "dataitineraries":"node ./models/data/itineraries.js"
+    "datacities": "node ./models/data/cities.js",
+    "dataitineraries": "node ./models/data/itineraries.js",
+    "datausers": "node ./models/data/users.js",
+    "datacountries": "node ./models/data/countries.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
+    "joi-oid": "^1.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.1"
   }
 }
